fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/Stationary_Preference__c.field-meta.xml
<CustomField>
    <fullName>Stationary_Preference__c</fullName>
    <label>Stationary Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Teleflex</fullName>
                <default>true</default>
                <label>Standard Teleflex</label>
            </value>
            <value>
                <fullName>Anesthesia/Respiratory</fullName>
            </value>
            <value>
                <fullName>Cardiac Care</fullName>
            </value>
            <value>
                <fullName>Interventional</fullName>
            </value>
            <value>
                <fullName>Specialty Markets</fullName>
            </value>
            <value>
                <fullName>Surgical</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Vascular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>