fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/UK_Material__c.field-meta.xml
<CustomField>
    <fullName>UK_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Grants access to UK10 Sales Org.</description>
    <inlineHelpText>Grants access to UK10 Sales Org.</inlineHelpText>
    <label>UK Material</label>
    <type>Checkbox</type>
</CustomField>