fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/Update_Type__c.field-meta.xml
<CustomField>
    <fullName>Update_Type__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <description>Field used by APEX to filter Sales Org updates vs. User Updates.</description>
    <inlineHelpText>Field used by APEX to filter Sales Org updates vs. User Updates.</inlineHelpText>
    <label>Update Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>