fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/US_Material__c.field-meta.xml
<CustomField>
    <fullName>US_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US Material</label>
    <type>Checkbox</type>
</CustomField>