fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/User_Administration__c.field-meta.xml
<CustomField>
    <fullName>User_Administration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>User Administration</label>
    <type>Checkbox</type>
</CustomField>