fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/Users_Email__c.field-meta.xml
<CustomField>
    <fullName>Users_Email__c</fullName>
    <formula>User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Users Email</label>
    <type>Text</type>
</CustomField>