fullSandbox11072023/force-app/main/default/objects/Contract_User__c/fields/View_Margin__c.field-meta.xml
<CustomField>
    <fullName>View_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>View Margin</label>
    <type>Checkbox</type>
</CustomField>