fullSandbox11072023/force-app/main/default/objects/Contract_User__c/listViews/IA.listView-meta.xml
<ListView>
    <fullName>IA</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Division_10__c</columns>
    <columns>Division_20__c</columns>
    <columns>Division_30__c</columns>
    <columns>Division_40__c</columns>
    <columns>Division_50__c</columns>
    <columns>Division_60__c</columns>
    <columns>US_Material__c</columns>
    <columns>CA_Material__c</columns>
    <columns>Active_Region__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>User_Administration__c</columns>
    <columns>View_Margin__c</columns>
    <columns>Pricing_Portal_Access__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Interventional Access</value>
    </filters>
    <label>IA</label>
    <language>en_US</language>
</ListView>