fullSandbox11072023/force-app/main/default/objects/Contract_User__c/listViews/IA_PP_users.listView-meta.xml
<ListView>
    <fullName>IA_PP_users</fullName>
    <columns>Business_Unit__c</columns>
    <columns>NAME</columns>
    <columns>Active_Region__c</columns>
    <columns>View_Margin__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Unit__c</field>
        <operation>equals</operation>
        <value>Interventional</value>
    </filters>
    <label>IA PP users</label>
</ListView>